--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-csv/tb_role.csv
-csv/tb_country.csv
-csv/tb_alert.csv
-csv/tb_readingmode.csv
-csv/tb_servicetype.csv
-csv/tb_city.csv
-csv/tb_weather.csv
-csv/tb_employee.csv
-csv/tb_sensortype.csv
-csv/tb_param.csv
-csv/tb_paramalert.csv
-csv/tb_paramsensortype.csv
-csv/tb_sensordevice.csv
-csv/tb_serviceevent.csv
-csv/tb_readingevent.csv
+DWH1_080/csv/tb_role.csv
+DWH1_080/csv/tb_country.csv
+DWH1_080/csv/tb_alert.csv
+DWH1_080/csv/tb_readingmode.csv
+DWH1_080/csv/tb_servicetype.csv
+DWH1_080/csv/tb_city.csv
+DWH1_080/csv/tb_weather.csv
+DWH1_080/csv/tb_employee.csv
+DWH1_080/csv/tb_sensortype.csv
+DWH1_080/csv/tb_param.csv
+DWH1_080/csv/tb_paramalert.csv
+DWH1_080/csv/tb_paramsensortype.csv
+DWH1_080/csv/tb_sensordevice.csv
+DWH1_080/csv/tb_serviceevent.csv
+DWH1_080/csv/tb_readingevent.csv
